<resources>
    <string name="app_name">ecommerce</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tnc">Some Terms and Conditions</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="password">Password</string>
    <string name="email">Email Id</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="proceed">Proceed</string>
    <string name="new_here">New here? Signup</string>
    <string name="somethingwentwrong">Something went wrong!</string>
    <string name="error_location">Error fetching location, Plese type.</string>
    <string name="building_name">Building name/House number</string>
    <string name="locality">Locality</string>
    <string name="d_instructions">Delivery Instructions</string>
    <string name="customer_name">Customer name</string>
    <string name="cust_ph_num">Customer phone number</string>
    <string name="save_n_proceed">Save and Proceed</string>
    <string name="new_address">New Address?</string>
    <string name="delivering_to">Delivering to</string>
    <string name="change">Change</string>
    <string name="summary">Summary</string>
    <string name="have_a_coupon">Have a coupon code?</string>
    <string name="coupon_applied">COUPON APPLIED SUCCESSFULLY</string>
    <string name="colon">:</string>
    <string name="sub_total">Sub-total</string>
    <string name="discount">Discount</string>
    <string name="delivery_charge">Delivery Charges</string>
    <string name="amount_payable">Amount payable</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="start_typing">Start typing location..</string>
    <string name="use_gps">USE GPS</string>
    <string name="full_name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="already_member">Already a member? Login!</string>
    <string name="verify_account">You need to verify your account to complete the verification process.</string>
    <string name="splash_app_name">E-commerce App</string>
    <string name="hyphen">-</string>
    <string name="add_plus">+</string>
    <string name="slect_cat">Select category</string>
    <string name="prod_name">Product Name</string>
    <string name="change_quantity">CHANGE QUANTITY</string>
    <string name="remove">REMOVE</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="cancel">Cancel</string>
    <string name="facing_issue">Facing any issue?\\nFound a bug, or any other suggestion?</string>
    <string name="or">OR</string>
    <string name="email_us">EMAIL US</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_detail">VIEW_DETAILS</string>
    <string name="product_of_day">Product of the day!</string>
    <string name="already_exist">This email id already exists!</string>
    <string name="added_to_cart">Added to Cart!</string>
    <string name="logout">Logout</string>
    <string name="help_n_feedback">Help and Feedback</string>
    <string name="update_app">Update App</string>
    <string name="share">Share with Friends</string>
    <string name="my_orders">My Orders</string>
    <string name="home">Home</string>
    <string name="banner_image">This is banner</string>
    <string name="category_image">This is Category Image</string>
    <string name="product_image">This is product image</string>
    <string name="user_detail">This is user image</string>
    <string name="pager_item">This is pager Image</string>
    <string name="cart_image">This is Cart Image</string>
    <string name="popular_product_image">This is popular product image</string>
    <string name="order_items">Order Items</string>
    <string name="buy_now">BUY NOW</string>
    <string name="call_us">CALL US</string>
    <string name="address_1">Select an address</string>
    <string name="subtotal_text">Sub total : Rs.</string>
    <string name="product_colon">Product :</string>
    <string name="price_colon">Price : Rs.</string>
    <string name="applying_coupon">Applying coupon...</string>
    <string name="change_quantity_1">CHANGE QUANTITY(%1$s)</string>
    <string name="placing_order">Placing order...</string>
    <string name="login_signup">Login/Signup</string>
    <string name="to_view_this">to view to this info</string>
    <string name="order_number">Order #%1$s</string>
    <string name="order_info">\"Rs.%1$s items\"</string>
    <string name="rs">Rs.%1$s</string>
    <string name="couldnt_fetch">Couldn\'t fetch items. Please try again</string>
    <string name="add_something">Add something to cart first!</string>
    <string name="enter_location">Please enter a location</string>
    <string name="loading">Loading...</string>
    <string name="placing_order_toast">Placing order...</string>
    <string name="wait">Please wait...</string>
    <string name="invalid_coupon">Incorrect Coupon Code</string>
    <string name="invalid_combination">Incorrect combination</string>
    <string name="my_cart">MY CART</string>
    <string name="share_text">Hey! Checkout my new E-commerce app :D</string>
    <string name="location">SELECT LOCATION</string>
    <string name="prduct_det">PRODUCT DETAIL</string>
    <string name="list">list</string>
    <string name="phoncode">+91</string>
</resources>
