<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/home_btn"
            android:title="@string/home"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/my_orders"
            android:title="@string/my_orders"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/share_with_friends_btn"
            android:title="@string/share"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/update_app_btn"
            android:title="@string/update_app"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/help_n_feedback_btn"
            android:title="@string/help_n_feedback"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/term_n_condition_btn"
            android:title="@string/tnc"
            android:icon="@drawable/ic_launcher"/>
        <item
            android:id="@+id/log_out_btn"
            android:title="@string/logout"
            android:icon="@drawable/ic_launcher"/>
    </group>
</menu>