<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:id="@+id/root_layout"
              >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/sixteen_dp"
        android:id="@+id/signUpLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullName"
                android:inputType="textPersonName"
                android:hint="@string/full_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobileNumber"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/mobile"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPassword"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:padding="@dimen/sixteen_dp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/nine_dp"
            android:background="@color/colorPrimary"
            android:id="@+id/signUpButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/nine_dp"
            android:layout_margin="@dimen/nine_dp"
            android:id="@+id/gotoLoginButton"
            android:text="@string/already_member"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/sixteen_dp"
        android:id="@+id/otpLayout">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/verify_account"
           android:layout_centerInParent="true"
           android:gravity="center"
           android:textSize="@dimen/twenty_dp"/>

        <com.digits.sdk.android.DigitsAuthButton
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
