<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.grappes.ecommerce.ui.activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/six_dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/six_dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="@dimen/fourteen_dp"
        android:text="@string/login"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/go_to_signup"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/new_here"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/sixteen_dp"/>

</LinearLayout>
