<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/root_layout"
              android:background="@color/white"
              >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressFormLayout"
        android:visibility="gone"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/building_name"
                android:id="@+id/addressLine1"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locality"
                android:id="@+id/addressLocality"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_delivery_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/d_instructions"
                android:id="@+id/addressInstruction"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/two_dp"
            android:background="@color/black"
            android:layout_margin="40dp"/>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name"
                android:id="@+id/customerAddressName"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cust_ph_num"
                android:id="@+id/customerAddressPhone"/>
        </android.support.design.widget.TextInputLayout>




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_n_proceed"
            android:textColor="@color/white"
            android:background="@color/black"
            android:gravity="center"
            android:padding="@dimen/nine_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:id="@+id/addressSaveButton"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:padding="@dimen/nine_dp"
        android:id="@+id/addressListLayout">


        <android.support.v7.widget.RecyclerView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/five_dp"
            android:divider="@color/white"
            android:layout_above="@+id/addNewAddressButton"
            android:id="@+id/addressListView"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sixteen_dp"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/new_address"
            android:id="@+id/addNewAddressButton"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorAccent"/>


    </RelativeLayout>

</LinearLayout>
