<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              >

    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar" />-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:text="@string/facing_issue"
        android:textSize="@dimen/twenty_three_dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CALL US"
        android:padding="@dimen/sixteen_dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:id="@+id/callUsButton"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <View
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="@dimen/one_dp"
            android:background="@color/black"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:padding="@dimen/nine_dp"
            android:background="@color/white"
            android:layout_centerInParent="true"
            android:textSize="@dimen/twenty_three_dp"
            android:layout_margin="@dimen/nine_dp"/>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_us"
        android:padding="@dimen/sixteen_dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/emailUsButton" />



</LinearLayout>
